fix: Fix scrollbar light mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -45,12 +45,18 @@
 }
 
 *::-webkit-scrollbar-track {
-  background: var(--mantine-color-dark-5);
+  background: light-dark(
+    var(--mantine-color-gray-5),
+    var(--mantine-color-dark-5)
+  );
   border-radius: 10px;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: var(--mantine-color-dark-4);
+  background-color: light-dark(
+    var(--mantine-color-gray-4),
+    var(--mantine-color-dark-4)
+  );
   border-radius: 10px;
   padding: 3px;
 }
